--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.DS_Store
+
 # Logs
 logs
 *.log
@@ -35,3 +37,7 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# IDE
+.idea
+package-lock.json
